# codeocean-mcp-server

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  run_tests.sh
.circleci/: config.yml
pyproject.toml  # Add pytest-dotenv to [tool.poetry.group.dev.dependencies] or equivalent/: pytest.ini      # Optional: configure pytest-dotenv if needed
src/codeocean_mcp_server/: file_utils.py  logging_config.py  models.py  search.py  server.py  token_efficient.py
src/codeocean_mcp_server/tools/: capsules.py  computations.py  custom_metadata.py  data_assets.py
tests/: bedrock_call.py  bedrock_tools_converter.py  mcp_client.py  test_multi_tool_calling.py  test_run_capsule_and_get_results.py  test_search.py  test_search_capsules.py  test_search_data_assets.py  test_token_efficient.py  test_tool_calling.py
